@@ -424,3 +424,9 @@ ADS functions are pending (broken at this point).
 
 *****
 
+Added utils.py file to keep low-level utility functions and constants
+Adjusted latex_manager.py, __main__.py, and bib_manager.py
+(but still need to move many functions from bm into utils).
+
+*****
+
